# e2edfconverter

./: .gitignore  CHANGELOG.md  README.md  inspect_edf.py  pyproject.toml
EEG_test_files/: ICARE_0312_05.mat  ICARE_0312_12.mat  ICARE_0382_13.mat  ICARE_0382_17.mat  ICARE_0382_23.mat  ICARE_0719_37.mat  ICARE_0719_39.mat  ICARE_0967_15.mat  ICARE_0967_21.mat
TODOs/: eventtypeinfo-decode.md  nicolet-parsing-plan.md
nicolet_e2edf/: __init__.py
nicolet_e2edf.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
nicolet_e2edf/nicolet/: __init__.py  cli.py  data.py  edf_writer.py  header.py  legacy.py  legacy_eeg.py  tui.py  types.py
nicolet_e2edf/nicolet_e2edf.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
nicolet_e2edf/tests/: __init__.py  test_data_sanity.py  test_edf_compliance.py  test_end_to_end.py  test_header_min.py
nicolet_e2edf/tools/: scan_corpus.py  view_with_mne.py
