[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nicolet-e2edf"
version = "0.0.1"
description = "Convert Nicolet/Nervus .e EEG recordings into EDF files."
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]
authors = [
    {name = "Nicolet e2edf contributors"}
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.23"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "hypothesis>=6.112",
    "ruff>=0.6",
    "black>=24.8",
    "mypy>=1.11"
]
tui = [
    "rich>=13.7"
]

[project.scripts]
nicolet-e2edf = "nicolet.cli:main"

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["nicolet_e2edf"]

[tool.black]
target-version = ["py310"]
line-length = 100

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
ignore = ["E203", "E266", "E501"]

[tool.ruff.lint.per-file-ignores]
"nicolet_e2edf/tests/*" = ["S101"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["nicolet_e2edf/tests"]
